frontend/src/components/CheckoutWrapper/Checkout/TotalCard/totalCard.scss
@use '../../../../scss/abstracts' as *;
@use '../../../../scss/layout' as *;
@use '../../../../scss/layout' as *;

#total-card.card.card--popup {
	.card-header {
		.btn--icon-sm {
			svg {
				transform: rotate(0deg);
			}
		}
	}

	&-expanded .card-header .btn--icon-sm svg {
		transform: rotate(180deg);
	}

	.card-footer {
		border-width: 0px;

		> * {
			flex: 1;
		}

		&.with-border {
			border-width: 1px;
		}

		#payment-request-button {
			@extend %icon-text-box;
		}
	}
}

